Fine tune for CI warnings.